// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`amutils.sql > line 22 1`] = `
[
  "select prop,
       pg_indexam_has_property(a.oid, prop) as "AM",
       pg_index_has_property('gcircleind'::regclass, prop) as "Index",
       pg_index_column_has_property('gcircleind'::regclass, 1, prop) as "Column"
  from pg_am a,
       unnest(array['asc', 'desc', 'nulls_first', 'nulls_last',
                    'orderable', 'distance_orderable', 'returnable',
                    'search_array', 'search_nulls',
                    'clusterable', 'index_scan', 'bitmap_scan',
                    'backward_scan',
                    'can_order', 'can_unique', 'can_multi_col',
                    'can_exclude', 'can_include',
                    'bogus']::text[])
         with ordinality as u(prop,ord)
 where a.amname = 'gist'
 order by ord",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "a",
                  },
                  "inh": true,
                  "location": 225,
                  "relname": "pg_am",
                  "relpersistence": "p",
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "u",
                    "colnames": [
                      {
                        "String": {
                          "sval": "prop",
                        },
                      },
                      {
                        "String": {
                          "sval": "ord",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "A_ArrayExpr": {
                                        "elements": [
                                          {
                                            "A_Const": {
                                              "location": 254,
                                              "sval": {
                                                "sval": "asc",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 261,
                                              "sval": {
                                                "sval": "desc",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 269,
                                              "sval": {
                                                "sval": "nulls_first",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 284,
                                              "sval": {
                                                "sval": "nulls_last",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 318,
                                              "sval": {
                                                "sval": "orderable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 331,
                                              "sval": {
                                                "sval": "distance_orderable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 353,
                                              "sval": {
                                                "sval": "returnable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 387,
                                              "sval": {
                                                "sval": "search_array",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 403,
                                              "sval": {
                                                "sval": "search_nulls",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 439,
                                              "sval": {
                                                "sval": "clusterable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 454,
                                              "sval": {
                                                "sval": "index_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 468,
                                              "sval": {
                                                "sval": "bitmap_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 503,
                                              "sval": {
                                                "sval": "backward_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 540,
                                              "sval": {
                                                "sval": "can_order",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 553,
                                              "sval": {
                                                "sval": "can_unique",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 567,
                                              "sval": {
                                                "sval": "can_multi_col",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 604,
                                              "sval": {
                                                "sval": "can_exclude",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 619,
                                              "sval": {
                                                "sval": "can_include",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 654,
                                              "sval": {
                                                "sval": "bogus",
                                              },
                                            },
                                          },
                                        ],
                                        "location": 248,
                                      },
                                    },
                                    "location": 662,
                                    "typeName": {
                                      "arrayBounds": [
                                        {
                                          "Integer": {},
                                        },
                                      ],
                                      "location": 664,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "unnest",
                                  },
                                },
                              ],
                              "location": 241,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "ordinality": true,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ord",
                          },
                        },
                      ],
                      "location": 747,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "prop",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 20,
                  "name": "AM",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "a",
                                },
                              },
                              {
                                "String": {
                                  "sval": "oid",
                                },
                              },
                            ],
                            "location": 44,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 51,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_indexam_has_property",
                          },
                        },
                      ],
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 73,
                  "name": "Index",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 95,
                                "sval": {
                                  "sval": "gcircleind",
                                },
                              },
                            },
                            "location": 107,
                            "typeName": {
                              "location": 109,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 119,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 73,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 144,
                  "name": "Column",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 173,
                                "sval": {
                                  "sval": "gcircleind",
                                },
                              },
                            },
                            "location": 185,
                            "typeName": {
                              "location": 187,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 197,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 200,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 144,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                      {
                        "String": {
                          "sval": "amname",
                        },
                      },
                    ],
                    "location": 719,
                  },
                },
                "location": 728,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 730,
                    "sval": {
                      "sval": "gist",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 39 1`] = `
[
  "select prop,
       pg_index_column_has_property('onek_hundred'::regclass, 1, prop) as btree,
       pg_index_column_has_property('hash_i4_index'::regclass, 1, prop) as hash,
       pg_index_column_has_property('gcircleind'::regclass, 1, prop) as gist,
       pg_index_column_has_property('sp_radix_ind'::regclass, 1, prop) as spgist_radix,
       pg_index_column_has_property('sp_quad_ind'::regclass, 1, prop) as spgist_quad,
       pg_index_column_has_property('botharrayidx'::regclass, 1, prop) as gin,
       pg_index_column_has_property('brinidx'::regclass, 1, prop) as brin
  from unnest(array['asc', 'desc', 'nulls_first', 'nulls_last',
                    'orderable', 'distance_orderable', 'returnable',
                    'search_array', 'search_nulls',
                    'bogus']::text[])
         with ordinality as u(prop,ord)
 order by ord",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "u",
                    "colnames": [
                      {
                        "String": {
                          "sval": "prop",
                        },
                      },
                      {
                        "String": {
                          "sval": "ord",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "A_ArrayExpr": {
                                        "elements": [
                                          {
                                            "A_Const": {
                                              "location": 600,
                                              "sval": {
                                                "sval": "asc",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 607,
                                              "sval": {
                                                "sval": "desc",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 615,
                                              "sval": {
                                                "sval": "nulls_first",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 630,
                                              "sval": {
                                                "sval": "nulls_last",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 664,
                                              "sval": {
                                                "sval": "orderable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 677,
                                              "sval": {
                                                "sval": "distance_orderable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 699,
                                              "sval": {
                                                "sval": "returnable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 733,
                                              "sval": {
                                                "sval": "search_array",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 749,
                                              "sval": {
                                                "sval": "search_nulls",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 785,
                                              "sval": {
                                                "sval": "bogus",
                                              },
                                            },
                                          },
                                        ],
                                        "location": 594,
                                      },
                                    },
                                    "location": 793,
                                    "typeName": {
                                      "arrayBounds": [
                                        {
                                          "Integer": {},
                                        },
                                      ],
                                      "location": 795,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "unnest",
                                  },
                                },
                              ],
                              "location": 587,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "ordinality": true,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ord",
                          },
                        },
                      ],
                      "location": 853,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "prop",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 20,
                  "name": "btree",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 49,
                                "sval": {
                                  "sval": "onek_hundred",
                                },
                              },
                            },
                            "location": 63,
                            "typeName": {
                              "location": 65,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 75,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 78,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 101,
                  "name": "hash",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 130,
                                "sval": {
                                  "sval": "hash_i4_index",
                                },
                              },
                            },
                            "location": 145,
                            "typeName": {
                              "location": 147,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 157,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 160,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 101,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 182,
                  "name": "gist",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 211,
                                "sval": {
                                  "sval": "gcircleind",
                                },
                              },
                            },
                            "location": 223,
                            "typeName": {
                              "location": 225,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 235,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 238,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 182,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 260,
                  "name": "spgist_radix",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 289,
                                "sval": {
                                  "sval": "sp_radix_ind",
                                },
                              },
                            },
                            "location": 303,
                            "typeName": {
                              "location": 305,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 315,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 318,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 260,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 348,
                  "name": "spgist_quad",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 377,
                                "sval": {
                                  "sval": "sp_quad_ind",
                                },
                              },
                            },
                            "location": 390,
                            "typeName": {
                              "location": 392,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 402,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 405,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 348,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 434,
                  "name": "gin",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 463,
                                "sval": {
                                  "sval": "botharrayidx",
                                },
                              },
                            },
                            "location": 477,
                            "typeName": {
                              "location": 479,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 489,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 492,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 434,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 513,
                  "name": "brin",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 542,
                                "sval": {
                                  "sval": "brinidx",
                                },
                              },
                            },
                            "location": 551,
                            "typeName": {
                              "location": 553,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 563,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 566,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 513,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 54 1`] = `
[
  "select prop,
       pg_index_has_property('onek_hundred'::regclass, prop) as btree,
       pg_index_has_property('hash_i4_index'::regclass, prop) as hash,
       pg_index_has_property('gcircleind'::regclass, prop) as gist,
       pg_index_has_property('sp_radix_ind'::regclass, prop) as spgist,
       pg_index_has_property('botharrayidx'::regclass, prop) as gin,
       pg_index_has_property('brinidx'::regclass, prop) as brin
  from unnest(array['clusterable', 'index_scan', 'bitmap_scan',
                    'backward_scan',
                    'bogus']::text[])
         with ordinality as u(prop,ord)
 order by ord",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "u",
                    "colnames": [
                      {
                        "String": {
                          "sval": "prop",
                        },
                      },
                      {
                        "String": {
                          "sval": "ord",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "A_ArrayExpr": {
                                        "elements": [
                                          {
                                            "A_Const": {
                                              "location": 448,
                                              "sval": {
                                                "sval": "clusterable",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 463,
                                              "sval": {
                                                "sval": "index_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 477,
                                              "sval": {
                                                "sval": "bitmap_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 512,
                                              "sval": {
                                                "sval": "backward_scan",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 549,
                                              "sval": {
                                                "sval": "bogus",
                                              },
                                            },
                                          },
                                        ],
                                        "location": 442,
                                      },
                                    },
                                    "location": 557,
                                    "typeName": {
                                      "arrayBounds": [
                                        {
                                          "Integer": {},
                                        },
                                      ],
                                      "location": 559,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "unnest",
                                  },
                                },
                              ],
                              "location": 435,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "ordinality": true,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ord",
                          },
                        },
                      ],
                      "location": 617,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "prop",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 20,
                  "name": "btree",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 42,
                                "sval": {
                                  "sval": "onek_hundred",
                                },
                              },
                            },
                            "location": 56,
                            "typeName": {
                              "location": 58,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 68,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 91,
                  "name": "hash",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 113,
                                "sval": {
                                  "sval": "hash_i4_index",
                                },
                              },
                            },
                            "location": 128,
                            "typeName": {
                              "location": 130,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 140,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 91,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 162,
                  "name": "gist",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 184,
                                "sval": {
                                  "sval": "gcircleind",
                                },
                              },
                            },
                            "location": 196,
                            "typeName": {
                              "location": 198,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 208,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 162,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 230,
                  "name": "spgist",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 252,
                                "sval": {
                                  "sval": "sp_radix_ind",
                                },
                              },
                            },
                            "location": 266,
                            "typeName": {
                              "location": 268,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 278,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 230,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 302,
                  "name": "gin",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 324,
                                "sval": {
                                  "sval": "botharrayidx",
                                },
                              },
                            },
                            "location": 338,
                            "typeName": {
                              "location": 340,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 350,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 302,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 371,
                  "name": "brin",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 393,
                                "sval": {
                                  "sval": "brinidx",
                                },
                              },
                            },
                            "location": 402,
                            "typeName": {
                              "location": 404,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 414,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_has_property",
                          },
                        },
                      ],
                      "location": 371,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 67 1`] = `
[
  "select amname, prop, pg_indexam_has_property(a.oid, prop) as p
  from pg_am a,
       unnest(array['can_order', 'can_unique', 'can_multi_col',
                    'can_exclude', 'can_include', 'bogus']::text[])
         with ordinality as u(prop,ord)
 where amtype = 'i'
 order by amname, ord",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "a",
                  },
                  "inh": true,
                  "location": 70,
                  "relname": "pg_am",
                  "relpersistence": "p",
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "u",
                    "colnames": [
                      {
                        "String": {
                          "sval": "prop",
                        },
                      },
                      {
                        "String": {
                          "sval": "ord",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "A_ArrayExpr": {
                                        "elements": [
                                          {
                                            "A_Const": {
                                              "location": 99,
                                              "sval": {
                                                "sval": "can_order",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 112,
                                              "sval": {
                                                "sval": "can_unique",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 126,
                                              "sval": {
                                                "sval": "can_multi_col",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 163,
                                              "sval": {
                                                "sval": "can_exclude",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 178,
                                              "sval": {
                                                "sval": "can_include",
                                              },
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "location": 193,
                                              "sval": {
                                                "sval": "bogus",
                                              },
                                            },
                                          },
                                        ],
                                        "location": 93,
                                      },
                                    },
                                    "location": 201,
                                    "typeName": {
                                      "arrayBounds": [
                                        {
                                          "Integer": {},
                                        },
                                      ],
                                      "location": 203,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "unnest",
                                  },
                                },
                              ],
                              "location": 86,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                  "ordinality": true,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "amname",
                          },
                        },
                      ],
                      "location": 281,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ord",
                          },
                        },
                      ],
                      "location": 289,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "amname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 15,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "prop",
                          },
                        },
                      ],
                      "location": 15,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 21,
                  "name": "p",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "a",
                                },
                              },
                              {
                                "String": {
                                  "sval": "oid",
                                },
                              },
                            ],
                            "location": 45,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 52,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_indexam_has_property",
                          },
                        },
                      ],
                      "location": 21,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "amtype",
                        },
                      },
                    ],
                    "location": 258,
                  },
                },
                "location": 265,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 267,
                    "sval": {
                      "sval": "i",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 78 1`] = `
[
  "CREATE TEMP TABLE foo (f1 int, f2 int, f3 int, f4 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "foo",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f2",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f3",
                  "is_local": true,
                  "location": 39,
                  "typeName": {
                    "location": 42,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f4",
                  "is_local": true,
                  "location": 47,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 80 1`] = `
[
  "CREATE INDEX fooindex ON foo (f1 desc, f2 asc, f3 nulls first, f4 nulls last)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "fooindex",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "f1",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DESC",
                },
              },
              {
                "IndexElem": {
                  "name": "f2",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_ASC",
                },
              },
              {
                "IndexElem": {
                  "name": "f3",
                  "nulls_ordering": "SORTBY_NULLS_FIRST",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "f4",
                  "nulls_ordering": "SORTBY_NULLS_LAST",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 25,
              "relname": "foo",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 82 1`] = `
[
  "select col, prop, pg_index_column_has_property(o, col, prop)
  from (values ('fooindex'::regclass)) v1(o),
       (values (1,'orderable'),(2,'asc'),(3,'desc'),
               (4,'nulls_first'),(5,'nulls_last'),
               (6, 'bogus')) v2(idx,prop),
       generate_series(1,4) col
 order by col, idx",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "v1",
                    "colnames": [
                      {
                        "String": {
                          "sval": "o",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 77,
                                      "sval": {
                                        "sval": "fooindex",
                                      },
                                    },
                                  },
                                  "location": 87,
                                  "typeName": {
                                    "location": 89,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "regclass",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "v2",
                    "colnames": [
                      {
                        "String": {
                          "sval": "idx",
                        },
                      },
                      {
                        "String": {
                          "sval": "prop",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 123,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 125,
                                  "sval": {
                                    "sval": "orderable",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 139,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 141,
                                  "sval": {
                                    "sval": "asc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 3,
                                  },
                                  "location": 149,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 151,
                                  "sval": {
                                    "sval": "desc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 4,
                                  },
                                  "location": 176,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 178,
                                  "sval": {
                                    "sval": "nulls_first",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 5,
                                  },
                                  "location": 194,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 196,
                                  "sval": {
                                    "sval": "nulls_last",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 6,
                                  },
                                  "location": 227,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 230,
                                  "sval": {
                                    "sval": "bogus",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "col",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 277,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 4,
                                    },
                                    "location": 279,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 261,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "col",
                          },
                        },
                      ],
                      "location": 296,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "idx",
                          },
                        },
                      ],
                      "location": 301,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "col",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "prop",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 18,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "o",
                                },
                              },
                            ],
                            "location": 47,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "col",
                                },
                              },
                            ],
                            "location": 50,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "prop",
                                },
                              },
                            ],
                            "location": 55,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_index_column_has_property",
                          },
                        },
                      ],
                      "location": 18,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`amutils.sql > line 90 1`] = `
[
  "CREATE INDEX foocover ON foo (f1) INCLUDE (f2,f3)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "foocover",
            "indexIncludingParams": [
              {
                "IndexElem": {
                  "name": "f2",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "f3",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "indexParams": [
              {
                "IndexElem": {
                  "name": "f1",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 25,
              "relname": "foo",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
